--- a/pom.xml
+++ b/pom.xml
@@ -2,14 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.liumapp.demo.mybatis.complex</groupId>
-  <artifactId>mybatis-with-complex-source</artifactId>
+  <groupId>com.liumapp.demo.druid.complex</groupId>
+  <artifactId>druid-with-complex-source</artifactId>
   <version>v1.0.0</version>
   <packaging>pom</packaging>
 
-  <name>mybatis-with-complex-source</name>
+  <name>druid-with-complex-source</name>
   <url>http://maven.apache.org</url>
   <modules>
-    <module>complex-service</module>
+    <module>druid-service</module>
   </modules>
 </project>
