--- a/druid-ui/package.json
+++ b/druid-ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "complex-ui",
+  "name": "druid-ui",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "liumapp <liumapp.com@gmail.com>",
