--- a/druid-service/pom.xml
+++ b/druid-service/pom.xml
@@ -48,6 +48,11 @@
       <groupId>mysql</groupId>
       <artifactId>mysql-connector-java</artifactId>
     </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>druid-spring-boot-starter</artifactId>
+      <version>1.1.10</version>
+    </dependency>
   </dependencies>
 
   <build>
