--- a/druid-service/src/main/resources/application.yml
+++ b/druid-service/src/main/resources/application.yml
@@ -3,36 +3,37 @@ server:
 
 spring:
   datasource:
+    druid:
+      primary:
+        url: jdbc:mysql://localhost:3306/test1?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&autoReconnect=true
+        username: root
+        password: adminadmin
+        driver-class-name: com.mysql.jdbc.Driver
+        max-idle: 100
+        max-active: 100
+        max-wait: 10000
+        min-idle: 10
+        validation-query: SELECT 1
+        test-on-borrow: true
+        test-while-idle: true
+        time-between-eviction-runs-millis: 5000
+        min-evictable-idle-time-millis: 60000
+      second:
+        url: jdbc:mysql://localhost:3306/test2?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&autoReconnect=true
+        username: root
+        password: adminadmin
+        driver-class-name: com.mysql.jdbc.Driver
+        max-idle: 100
+        max-active: 100
+        max-wait: 10000
+        min-idle: 10
+        validation-query: SELECT 1
+        test-on-borrow: true
+        test-while-idle: true
+        time-between-eviction-runs-millis: 5000
+        min-evictable-idle-time-millis: 60000
     tomcat:
       initial-size: 10
-    primary:
-      url: jdbc:mysql://localhost:3306/test1?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&autoReconnect=true
-      username: root
-      password: adminadmin
-      driver-class-name: com.mysql.jdbc.Driver
-      max-idle: 100
-      max-active: 100
-      max-wait: 10000
-      min-idle: 10
-      validation-query: SELECT 1
-      test-on-borrow: true
-      test-while-idle: true
-      time-between-eviction-runs-millis: 5000
-      min-evictable-idle-time-millis: 60000
-    second:
-      url: jdbc:mysql://localhost:3306/test2?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&autoReconnect=true
-      username: root
-      password: adminadmin
-      driver-class-name: com.mysql.jdbc.Driver
-      max-idle: 100
-      max-active: 100
-      max-wait: 10000
-      min-idle: 10
-      validation-query: SELECT 1
-      test-on-borrow: true
-      test-while-idle: true
-      time-between-eviction-runs-millis: 5000
-      min-evictable-idle-time-millis: 60000
 
 mybatis:
   configuration:
