--- a/druid-service/src/main/resources/application.yml
+++ b/druid-service/src/main/resources/application.yml
@@ -4,11 +4,17 @@ server:
 spring:
   datasource:
     druid:
+      filter:
+        stat:
+          db-type: mysql
+          log-slow-sql: true
+          slow-sql-millis: 2000
       primary:
         url: jdbc:mysql://localhost:3306/test1?useUnicode=true&characterEncoding=utf8&rewriteBatchedStatements=true&autoReconnect=true
         username: root
         password: adminadmin
         driver-class-name: com.mysql.jdbc.Driver
+        initial-size: 10
         max-idle: 100
         max-active: 100
         max-wait: 10000
@@ -32,8 +38,6 @@ spring:
         test-while-idle: true
         time-between-eviction-runs-millis: 5000
         min-evictable-idle-time-millis: 60000
-    tomcat:
-      initial-size: 10
 
 mybatis:
   configuration:
